refactor : JWT 인증 분기처리 세부화 및 에러처리 수정